# rust-ui-demo

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
src/: lib.rs
src/binja_ui_ffi/: sidebar.rs
src/binja_ui_ffi/cpp/: demo_sidebar.cpp  demo_sidebar.h  sidebar_creator.cpp  sidebar_creator.h
